--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Roman Zhurid
 description: Hello!
 show_downloads: false
-remote_theme: pages-themes/midnight@v0.2.0
+remote_theme: pages-themes/tactile@v0.2.0
 # theme: jekyll-theme-hacker
 # url: https://github.com/mzfkr97
